[package]
name = "hippius-hermes-cli"
version = "0.2.0"
edition = "2021"
description = "CLI for the Hippius Hermes P2P Protocol"
license = "MIT"
repository = "https://github.com/thenervelab/hermes"
homepage = "https://hermes.hippius.com"
authors = ["The Hippius Project <https://hippius.com>"]

[dependencies]
hippius-hermes-core = { path = "../core" }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
iroh = "0.96.1"
rand_core = "0.6"
rand = "0.7"
subxt = "0.34"
parity-scale-codec = { version = "3.6.9", features = ["derive"] }
sp-core = "34.0.0"
hex = "0.4.3"
dialoguer = "0.11"
zeroize = "1.8"
subxt-signer = { version = "0.34", features = ["sr25519"] }
crypto_box = "0.9.1"
serde_json = "1.0.149"
reqwest = { version = "0.11", features = ["json"] }
