[package]
name = "hippius-hermes-core"
version = "0.1.0"
edition = "2021"
description = "Bittensor cross-subnet M2M communication protocol over Iroh and Hippius"
license = "MIT"
repository = "https://github.com/thenervelab/hermes"
homepage = "https://hermes.hippius.com"
authors = ["The Hippius Project <https://hippius.com>"]
keywords = ["bittensor", "p2p", "iroh", "quic"]
categories = ["network-programming"]

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full", "tracing"] }

# P2P Networking (Iroh)
iroh = "0.96.1"

# Substrate Client (for Identity fetching)
subxt = "0.34"

# HTTP API (for SyncEngine)
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
tokio-util = { version = "0.7", features = ["io"] }

# Offline storage queue
sled = "0.34"
uuid = { version = "1.7", features = ["v4"] }

# Cryptography
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
crypto_box = "0.9.1"
hkdf = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
zeroize = "1.8"

# URL validation (SSRF prevention)
url = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"
rust-s3 = { version = "0.37.1", default-features = false, features = ["tokio-native-tls"] }
sp-core = "39.0.0"
scale-decode = "0.10.0"
parity-scale-codec = "3.7.5"
scale-info = "2.11.6"

[dev-dependencies]
tempfile = "3.25.0"
